# real_estate_bot

./: .env.example  DESIGN.md  Makefile  README.md  Test.md  pyproject.toml
scripts/: bootstrap_image_map.py  build_index.py
src/app/: main.py
src/core/: config.py  logging.py  prompts.py
src/images/: mapping.py
src/lead/: detector.py  scoring.py
src/llm/: provider.py
src/llm/templates/: system_chat.txt
src/rag/: guardrails.py  ingest.py  postprocess.py  retriever.py
tests/: test_chat_endpoint.py  test_guardrails.py  test_image_mapping.py  test_retrieval_and_citations.py
